--- a/index.html
+++ b/index.html
@@ -87,9 +87,15 @@ var chart = new OrgChart(document.getElementById("tree"), {
     { id: 3, pid: 111, name: "كبش", title: "تم البيع", img: "sheep.png" },
     { id: 4, pid: 111, name: "رخل دولي",
     title:"حيه", img: "sheep.png" }, 
-    { id: 5, pid: 2, name: "رخل دولي", title: "حيه", img: "sheep.png" }, 
+    /* - - - - - - - - */
+    { id: 5, pid: 111, name: "رخل دولي", title: "صغار", img: "sheep.png" }, 
+    { id: 6, pid: 111, name: "رخل دولي", title: "صغار", img: "sheep.png" }, 
+    { id: 7, pid: 111, name: "رخل دولي", title: "صغار", img: "sheep.png" }, 
+    /* - - - - - - - - */
+    { id: 8, pid: 2, name: "رخل", title: "حيه", img: "sheep.png" }, 
+    { id: 9 , pid: 2, name: "فرير", title: "حي", img: "sheep.png" }, 
     
-    {id:222,name:"جديه", title:"شاه", img:"sheep.png"}, 
+    {id:222,name:"جديه", title:"عشار", img:"sheep.png"}, 
     ]
 });
  </script>
