--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ html, body{
 [data-n-id="4"] circle {
   fill: green ;
 }
-[data-n-id="5"] circle {
+[data-n-id="8"] circle, [data-n-id="9"] circle {
   fill: gray ;
 }
 /* جديه */
